# openms-thermo-bridge

./: .gitignore  CMakeLists.txt  README.md  ThermoWrapper.cpp  ThermoWrapper.h  ThermoWrapperManaged.cs  ThermoWrapperManaged.csproj  build_linux.sh  run_test.py  thermo_host.cpp
.github/workflows/: ci.yml  release.yml
build-multiconfig/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  OpenMSThermoBridge.NuGet.config  OpenMSThermoBridgeConfig.cmake  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake  thermo_bridge_tests-b12d07c_include.cmake  thermo_bridge_tests-b12d07c_tests.cmake
build-multiconfig/Release/: thermo_bridge_tests  thermo_host
build-multiconfig/Testing/Temporary/: CTestCostData.txt
cmake/: DownloadThermoPackages.cmake  FindDotNetHost.cmake  OpenMSThermoBridgeConfig.cmake.in  OpenMSThermoBridgeFunctions.cmake  OpenMSThermoBridgeHelpers.cmake.in
include/openms_thermo_bridge/: cv_mapping.hpp  thermo_bridge.hpp
install/lib/cmake/OpenMSThermoBridge/: OpenMSThermoBridgeConfig.cmake  OpenMSThermoBridgeTargets.cmake
src/: cv_mapping.cpp  thermo_bridge.cpp  thermo_host_main.cpp
tests/: test_cv_mapping.cpp  test_thermo_bridge.cpp
